--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,17 @@
 *.zip
 *.tar.gz
 *.rar
+*.7z
+*.7zip
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+# Project files
+*.iml
+.project
+.classpath
+/target/
+/.settings/
+
