--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	</properties>
 
 	<build>
-   
+
 
 		<plugins>
 			<plugin>
@@ -32,63 +32,83 @@
 					<finalName>Camper</finalName>
 				</configuration>
 			</plugin>
-			 <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-shade-plugin</artifactId>
-      <version>3.1.0</version>
-      <!-- Do not include the <configuration>...</configuration> part if you are using Sponge! -->
-      <configuration>
-        <relocations>
-          <relocation>
-            <pattern>org.bstats</pattern>
-            <!-- Replace this with your package! -->
-            <shadedPattern>xyz.Cazcez.Camper</shadedPattern>
-          </relocation>
-        </relocations>
-      </configuration>
-      <executions>
-        <execution>
-          <phase>package</phase>
-          <goals>
-            <goal>shade</goal>
-          </goals>
-        </execution>
-      </executions>
-    </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.1.0</version>
+				<!-- Do not include the <configuration>...</configuration> part if you 
+					are using Sponge! -->
+				<configuration>
+					<relocations>
+						<relocation>
+							<pattern>org.bstats</pattern>
+							<!-- Replace this with your package! -->
+							<shadedPattern>xyz.Cazcez.Camper</shadedPattern>
+						</relocation>
+					</relocations>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
 	<repositories>
+
 		<repository>
 			<id>spigot-repo</id>
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 		</repository>
+
 		<repository>
-  <id>CodeMC</id>
-  <url>https://repo.codemc.org/repository/maven-public</url>
-</repository>
+			<id>CodeMC</id>
+			<url>https://repo.codemc.org/repository/maven-public</url>
+		</repository>
+
+		<repository>
+			<id>sk89q-repo</id>
+			<url>>http://maven.sk89q.com/repo/</url>
+		</repository>
+
 	</repositories>
 
 
+
+
 	<dependencies>
+
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
 			<version>1.15.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<dependency>
-  <groupId>org.bstats</groupId>
-  <artifactId>bstats-bukkit</artifactId>
-  <version>1.7</version>
-  <scope>compile</scope>
-</dependency>
-<dependency>
-  <groupId>com.google.code.findbugs</groupId>
-  <artifactId>jsr305</artifactId>
-  <version>3.0.2</version>
-</dependency>
-		
+			<groupId>org.bstats</groupId>
+			<artifactId>bstats-bukkit</artifactId>
+			<version>1.7</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+
+        <dependency>
+            <groupId>com.sk89q.worldedit</groupId>
+            <artifactId>worldedit-bukkit</artifactId>
+            <version>6.1.4-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
 
 	</dependencies>
 
