--- a/pom.xml
+++ b/pom.xml
@@ -70,12 +70,12 @@
 			<id>CodeMC</id>
 			<url>https://repo.codemc.org/repository/maven-public</url>
 		</repository>
-
+		
 		<repository>
-			<id>sk89q-repo</id>
-			<url>>http://maven.sk89q.com/repo/</url>
+			<id>enginehub-maven</id>
+			<url>http://maven.enginehub.org/repo/</url>
 		</repository>
-
+		
 	</repositories>
 
 
@@ -106,7 +106,7 @@
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
             <artifactId>worldedit-bukkit</artifactId>
-            <version>6.1.4-SNAPSHOT</version>
+            <version>7.0.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
